<resources>

    <string name="app_name">웹소소</string>

    <!-- main_bottomNavigation -->
    <string name="menu_bottom_home">홈</string>
    <string name="menu_bottom_library">서재</string>
    <string name="menu_bottom_recode">기록</string>
    <string name="menu_bottom_my">My</string>

    <!-- fragment_record -->
    <string name="record_title_my_record">내 기록</string>
    <string name="record_novel_count">%d개</string>
    <string name="record_null_post_novel">읽은 웹소설에 대해\n기록을 남겨볼까요?</string>
    <string name="record_go_to_post_novel">웹소설 기록하기</string>

    <!-- PostNovelActivity -->
    <string name="post_read_status_finish">읽은 날짜</string>
    <string name="post_read_status_reading">시작 날짜</string>
    <string name="post_read_status_drop">종료 날짜</string>
    <string name="api_read_status_finish">FINISH</string>
    <string name="api_read_status_reading">READING</string>
    <string name="api_read_status_drop">DROP</string>
    <string name="api_read_status_wish">WISH</string>
    <string name="post_server_error">서비스 접속이 원활하지 않습니다</string>

    <!-- dialog_post_success -->
    <string name="tv_post_success_title">내 서재에 작품이\n성공적으로 등록되었어요!</string>
    <string name="tv_navigate_to_memo">작품에 메모 남기기</string>
    <string name="tv_back_to_home">홈으로 돌아가기</string>

    <!-- dialog_post_navigate_left -->
    <string name="tv_dialog_exit_button">나가기</string>
    <string name="tv_dialog_keep_button">계속 작성하기</string>
    <string name="tv_post_bottom_sheet_year">등록을 취소할까요?</string>

    <!-- dialog_date_picker -->
    <string name="tv_post_date_picker_read_date_start_title">시작 날짜</string>
    <string name="tv_post_date_picker_read_date_end_title">종료 날짜</string>
    <string name="tv_post_date_picker_year">연도</string>
    <string name="tv_post_date_picker_month">월</string>
    <string name="tv_post_date_picker_day">일</string>
    <string name="tv_post_date_edit_button">완료</string>

    <!-- fragment_home -->
    <string name="home_sosopick">소소’s pick</string>
    <string name="home_sosopick_description">지금 소소들이 등록한 작품</string>
    <string name="home_sosopick_register_count">%d명이 등록</string>
    <string name="home_pressed_back_button">뒤로가기를 한 번 더 누르면 종료됩니다</string>

    <!-- SearchActivity -->
    <string name="search_result_null">검색결과가 없어요ㅠ</string>
    <string name="search_title">검색</string>

    <!-- activity_post_novel -->
    <string name="tv_post_read_status">읽기 상태</string>
    <string name="tv_post_read_status_suffix">" "*</string>
    <string name="c_read_status_finish">읽음</string>
    <string name="c_read_status_reading">읽는 중</string>
    <string name="c_read_status_drop">하차</string>
    <string name="c_read_status_wish">읽고 싶음</string>
    <string name="tv_post_read_date_title">읽은 날짜</string>
    <string name="tv_post_read_date_tilde">~</string>
    <string name="tv_post_keyword_title">키워드</string>
    <string name="tv_post_novel_detail_title">작품 소개</string>
    <string name="tv_post_novel_genre_title">장르</string>
    <string name="tv_post_novel_site_title">작품 보러가기</string>
    <string name="tv_post_novel_site_naver">네이버시리즈</string>
    <string name="tv_post_novel_site_kakao">카카오페이지</string>
    <string name="tv_post_post_complete_button">내 서재에 등록</string>
    <string name="tv_post_edit_complete_button">수정 완료</string>
    <string name="iv_post_cover_description">표지 이미지</string>
    <string name="iv_post_navigate_left_description">뒤로가기</string>

    <!-- Novel Detail -->
    <string name="novel_detail_memo">메모</string>
    <string name="novel_detail_info">정보</string>
    <string name="novel_detail_new_memo">새로운 메모를 작성해보세요</string>

    <!-- Novel Info -->
    <string name="novel_info_my_evaluation">나의 평가</string>
    <string name="novel_info_read_status">읽기 상태</string>
    <string name="novel_info_read_date">읽은 날짜</string>
    <string name="novel_info_tilde">~</string>
    <string name="novel_info_key_word">키워드</string>
    <string name="novel_info_intro">작품 소개</string>
    <string name="novel_info_genre">장르</string>
    <string name="novel_info_platform_title">작품 보러가기</string>
    <string name="novel_info_naver_series">네이버시리즈</string>
    <string name="novel_info_kakao_page">카카오페이지</string>

    <!-- Memo Plain -->
    <string name="memo_plain_edit">수정</string>

    <!-- Edit Memo Cancel Dialog -->
    <string name="dialog_cancel_title">작성을 취소할까요?</string>
    <string name="dialog_cancel_content">작성 중인 내용이 모두 사라져요!</string>
    <string name="dialog_cancel_exit">나가기</string>
    <string name="dialog_cancel_keep_write">계속 진행하기</string>

    <!-- Delete Memo Dialog -->
    <string name="dialog_memo_delete_title">메모를 삭제하실 건가요?</string>
    <string name="dialog_memo_delete_content">삭제한 메모는 다시 되돌릴 수 없어요!</string>
    <string name="dialog_memo_delete_drop">삭제하기</string>
    <string name="dialog_memo_delete_dismiss">취소</string>

    <!-- Delete Novel Dialog -->
    <string name="dialog_novel_delete_title">이 작품을 삭제하실 건가요?</string>
    <string name="dialog_novel_delete_content">읽기 정보와 작성한 메모가 모두 사라져요!\n삭제한 내용은 절대 되돌릴 수 없어요ㅠ</string>
    <string name="dialog_novel_delete_drop">삭제하기</string>
    <string name="dialog_novel_delete_dismiss">취소</string>

    <!-- my_page_fragment -->
    <string name="my_page_title">마이페이지</string>
    <string name="my_page_user_name">%s님</string>
    <string name="my_page_regist_novel_count">등록작품</string>
    <string name="my_page_record_count">기록</string>
    <string name="my_page_selected_avatar">캐릭터 선택</string>
    <string name="my_page_user_information">계정정보 확인</string>
    <string name="my_page_logout">로그아웃</string>
    <string name="my_page_go_to_insta">웹소소 인스타 보러가기</string>
    <string name="my_page_terms_of_use">서비스 이용약관</string>

    <!-- dialog_avatar -->
    <string name="dialog_avatar_represent">대표 캐릭터 설정하기</string>
    <string name="dialog_avatar_maintain">원래대로 유지하기</string>
    <string name="dialog_avatar_return">돌아가기</string>

    <!-- activity_check_user_info -->
    <string name="check_user_info_title">계정정보 확인</string>
    <string name="check_user_info_nickname_title">닉네임</string>
    <string name="check_user_info_email_title">이메일</string>
    <string name="check_user_info_cancel_membership_title">회원탈퇴</string>

    <!-- activity_change_name -->
    <string name="change_name_title">닉네임 변경</string>
    <string name="change_name_complete">완료</string>
    <string name="change_name_nickname">닉네임</string>
    <string name="change_name_text_count">%d/10\n</string>

    <!-- fragment_library -->
    <string name="library_title">내 서재</string>
    <string name="library_tb_item_all">전체</string>
    <string name="library_tb_item_finish">읽음</string>
    <string name="library_tb_item_reading">읽는 중</string>
    <string name="library_tb_item_drop">하차</string>
    <string name="library_tb_item_wish">읽고싶음</string>
    <string name="library_empty_comment">서재가 아직 비어있네요!</string>
    <string name="library_novel_post">웹소설 등록하기</string>
    <string name="tv_post_keyword">키워드 등록</string>
    <string name="library_menu_newest">최신 순</string>
    <string name="library_menu_oldest">오래된 순</string>

    <!-- fragment_memo -->
    <string name="novel_memo_empty_message">아직 작성된 메모가 없어요</string>
    <string name="novel_memo_fill_message">새로운 메모를 작성해보세요</string>

    <!-- memo_write -->
    <string name="memo_write_complete">완료</string>
</resources>