<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_radius_12dp"
    android:paddingHorizontal="22dp"
    android:paddingVertical="24dp">

    <ImageView
        android:id="@+id/ivDialogCancelWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_warning_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDialogCancelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/dialog_cancel_title"
        android:textAppearance="@style/title2"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivDialogCancelWarning" />

    <TextView
        android:id="@+id/tvDialogCancelContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/dialog_cancel_content"
        android:textAppearance="@style/label1"
        android:textColor="@color/gray_30_848484"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDialogCancelTitle" />

    <TextView
        android:id="@+id/tvDialogCancelExitBtn"
        android:layout_width="116dp"
        android:layout_height="40dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/bg_gray50_radius_8dp"
        android:gravity="center"
        android:text="@string/dialog_cancel_exit"
        android:textAppearance="@style/label1"
        android:textColor="@color/gray_300_52515F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDialogCancelContent" />

    <TextView
        android:id="@+id/tvDialogCancelDismissBtn"
        android:layout_width="116dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/bg_primary200_radius_8dp"
        android:gravity="center"
        android:text="@string/dialog_cancel_keep_write"
        android:textAppearance="@style/label1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/tvDialogCancelExitBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvDialogCancelExitBtn"
        app:layout_constraintTop_toTopOf="@id/tvDialogCancelExitBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>