<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_radius_12dp"
    android:paddingHorizontal="22dp"
    android:paddingVertical="24dp">

    <ImageView
        android:id="@+id/ivDialogNovelDeleteWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_warning_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDialogNovelDeleteTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/dialog_novel_delete_title"
        android:textAppearance="@style/title2"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivDialogNovelDeleteWarning" />

    <TextView
        android:id="@+id/tvDialogNovelDeleteContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:text="@string/dialog_novel_delete_content"
        android:textAppearance="@style/label1"
        android:textColor="@color/gray_30_848484"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDialogNovelDeleteTitle" />

    <TextView
        android:id="@+id/btnDialogNovelDeleteDrop"
        android:layout_width="116dp"
        android:layout_height="40dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/bg_gray50_radius_8dp"
        android:gravity="center"
        android:text="@string/dialog_novel_delete_drop"
        android:textAppearance="@style/label1"
        android:textColor="@color/gray_300_52515F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDialogNovelDeleteContent" />

    <TextView
        android:id="@+id/btnDialogCancelDismiss"
        android:layout_width="116dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/bg_primary200_radius_8dp"
        android:gravity="center"
        android:text="@string/dialog_novel_delete_dismiss"
        android:textAppearance="@style/label1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/btnDialogNovelDeleteDrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnDialogNovelDeleteDrop"
        app:layout_constraintTop_toTopOf="@id/btnDialogNovelDeleteDrop" />
</androidx.constraintlayout.widget.ConstraintLayout>