<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ivChangeNameBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_navigate_left"
        android:layout_marginStart="18dp"
        android:layout_marginTop="68dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvChangeNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_name_title"
        android:textAppearance="@style/title2"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivChangeNameBack"
        app:layout_constraintBottom_toBottomOf="@id/ivChangeNameBack"/>

    <TextView
        android:id="@+id/tvChangeNameComplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_name_complete"
        android:textAppearance="@style/title2"
        android:textColor="@color/primary_100_6341F0"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="@id/ivChangeNameBack"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/viewHeaderUnderLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_50_F4F5F8"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvChangeNameTitle"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvChanegeNameNickNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_name_nickname"
        android:textAppearance="@style/body2"
        android:textColor="@color/gray_200_AEADB3"
        android:layout_marginTop="36dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvChangeNameTitle"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/etChangeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textAppearance="@style/body1"
        android:maxLines="1"
        android:inputType="text"
        android:textCursorDrawable="@color/primary_100_6341F0"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/tvChanegeNameNickNameTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/ivChangeNameCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_search_cancel"
        android:layout_marginBottom="4dp"
        app:layout_constraintEnd_toEndOf="@id/etChangeName"
        app:layout_constraintBottom_toBottomOf="@id/etChangeName"/>

    <TextView
        android:id="@+id/tvChangeNameCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_name_text_count"
        android:textAppearance="@style/label1"
        android:textColor="@color/gray_200_AEADB3"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/etChangeName"
        app:layout_constraintEnd_toEndOf="@id/etChangeName"/>

</androidx.constraintlayout.widget.ConstraintLayout>