<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvPostSuccessTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/tv_post_success_title"
        android:textAlignment="center"
        android:textAppearance="@style/headline1"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/avPostSuccess"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="40dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/tvPostSuccessTitle"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/lottie_post_success" />

    <LinearLayout
        android:id="@+id/llNavigateToMemo"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/shape_post_navigate_to_memo"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/tvBackToHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent">

        <TextView
            android:id="@+id/tvNavigateToMemo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_navigate_to_memo"
            android:textAppearance="@style/title1"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvBackToHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/tv_back_to_home"
        android:textAlignment="center"
        android:textAppearance="@style/body2"
        android:textColor="@color/gray_200_AEADB3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>