<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/ivCheckUserInfoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_navigate_left"
        android:layout_marginStart="20dp"
        android:layout_marginTop="68dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvCheckUserInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_user_info_title"
        android:textAppearance="@style/title2"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivCheckUserInfoBack"
        app:layout_constraintBottom_toBottomOf="@id/ivCheckUserInfoBack"/>

    <View
        android:id="@+id/viewHeaderUnderLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_50_F4F5F8"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvCheckUserInfoTitle"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvCheckUserInfoNickNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_user_info_nickname_title"
        android:textAppearance="@style/body1"
        android:textColor="@color/black"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toBottomOf="@id/ivCheckUserInfoBack"
        app:layout_constraintStart_toStartOf="@id/ivCheckUserInfoBack"/>

    <TextView
        android:id="@+id/tvCheckUserInfoNickName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/body2"
        android:textColor="@color/gray_200_AEADB3"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/tvCheckUserInfoNickNameTitle"
        app:layout_constraintStart_toStartOf="@id/tvCheckUserInfoNickNameTitle"
        tool:text="김명진"/>

    <View
        android:id="@+id/viewCheckUserInfoBetweenLineOn"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_50_F4F5F8"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvCheckUserInfoNickName"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvCheckUserInfoEmailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_user_info_email_title"
        android:textAppearance="@style/body1"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/viewCheckUserInfoBetweenLineOn"
        app:layout_constraintStart_toStartOf="@id/tvCheckUserInfoNickName"/>

    <TextView
        android:id="@+id/tvCheckUserInfoEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/body2"
        android:textColor="@color/gray_200_AEADB3"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/tvCheckUserInfoEmailTitle"
        app:layout_constraintStart_toStartOf="@id/tvCheckUserInfoEmailTitle"
        />

    <View
        android:id="@+id/viewCheckUserInfoBetweenLineUnder"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_50_F4F5F8"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvCheckUserInfoEmail"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvCheckUserInfoCancelMembership"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_user_info_cancel_membership_title"
        android:textAppearance="@style/body1"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/viewCheckUserInfoBetweenLineUnder"
        app:layout_constraintStart_toStartOf="@id/tvCheckUserInfoNickName"/>

</androidx.constraintlayout.widget.ConstraintLayout>