<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.teamwss.websoso.ui.main.myPage.changeNickName.ChangeNicknameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivChangeNicknameBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="68dp"
            android:src="@drawable/ic_navigate_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvChangeNicknameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_name_title"
            android:textAppearance="@style/title2"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/ivChangeNicknameBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivChangeNicknameBack" />

        <TextView
            android:id="@+id/tvChangeNicknameComplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:enabled="@{viewModel.userNickname.strip().length()>0}"
            android:text="@string/change_name_complete"
            android:textAppearance="@style/title2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivChangeNicknameBack" />

        <View
            android:id="@+id/viewHeaderUnderLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/gray_50_F4F5F8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvChangeNicknameTitle" />

        <TextView
            android:id="@+id/tvChanegeNameNickNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="36dp"
            android:text="@string/change_name_nickname"
            android:textAppearance="@style/body2"
            android:textColor="@color/gray_200_AEADB3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvChangeNicknameTitle" />

        <EditText
            android:id="@+id/etChangeNickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="4dp"
            android:inputType="text"
            android:maxLength="@{viewModel.MAX_LENGTH}"
            android:maxLines="1"
            android:text="@={viewModel.userNickname}"
            android:textAppearance="@style/body1"
            android:textColor="@color/black"
            android:textCursorDrawable="@color/primary_100_6341F0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvChanegeNameNickNameTitle" />

        <ImageView
            android:id="@+id/ivChangeNicknameCancel"
            visibleGone="@{viewModel.userNickname.length()>0}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:src="@drawable/ic_search_cancel"
            app:layout_constraintBottom_toBottomOf="@id/etChangeNickname"
            app:layout_constraintEnd_toEndOf="@id/etChangeNickname" />

        <TextView
            android:id="@+id/tvChangeNicknameCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{String.format(@string/change_name_text_count, viewModel.userNameLength)}"
            android:textAppearance="@style/label1"
            android:textColor="@color/gray_200_AEADB3"
            app:layout_constraintEnd_toEndOf="@id/etChangeNickname"
            app:layout_constraintTop_toBottomOf="@id/etChangeNickname" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>